# reVReports

./: .gitignore  .pre-commit-config.yaml  .pylintrc  CITATION.cff  README.md  README.rst  USAGE.md  environment.yml  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt  setup.py
.github/: copilot-instructions.md  dependabot.yml  release-drafter.yml
.github/workflows/: ci-python.yml  codecov.yml  codeql.yml  lint_code_base.yml  mamba_test.yml  publish_to_pypi.yml
reVReports/: __init__.py  characterizations.py  cli.py  configs.py  data.py  exceptions.py  fonts.py  logs.py  maps.py  plots.py  version.py
reVReports/datasets/: ne_50m_admin_1_states_provinces_lakes_conus.geojson
reVReports/utilities/: maps.py
tests/: conftest.py  test_characterizations.py  test_cli.py  test_configs.py  test_data.py  test_exceptions.py  test_logs.py  test_maps.py  test_plots.py
tests/data/: config_pv_map_vars.json  config_wind_bespoke_5_scen.json  config_wind_bespoke_6_scen.json
tests/data/maps/inputs/: counties.geojson  map-supply-curve-solar.csv
tests/data/supply_curves/geo/: egs_4500m_sample.csv  egs_5500m_sample.csv  egs_6500m_sample.csv
tests/data/supply_curves/osw/: limited_access_sample.csv  open_access_sample.csv  reference_access_sample.csv
tests/data/supply_curves/pv/: limited_access_sample.csv  open_access_sample.csv  reference_access_sample.csv
tests/data/supply_curves/wind_bespoke/: limited_access_sample.csv  open_access_sample.csv  reference_access_sample.csv
tests/data/supply_curves/wind_vanilla/: baseline_sample.csv  ecological_sample.csv  social_sample.csv
tests/integration/: test_cli_integration.py
tests/unit/: test_cli_unit.py
tests/utilities/: test_utilities_maps.py  test_utilities_plots.py
