[build-system]
requires = [
  "setuptools >= 80",
  "setuptools_scm[toml] >= 8",
]
build-backend = 'setuptools.build_meta'


[project]
name="NREL-COMPASS"
dynamic = ["version"]
description = "For creating standardized graphics to summarize/report outputs from reV supply curves."
readme = "README.md"
authors = [
  {name = "Michael Gleason", email = "mike.gleason@nrel.gov"},
]
maintainers = [
  {name = "Paul Pinchuk", email = "ppinchuk@nrel.gov"},
]
license = "BSD-3-Clause"
keywords = ["reVReports", "NREL", "Supply Curve", "Visualization", "Graphics"]
requires-python = ">= 3.10"
classifiers=[
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Natural Language :: English",
#   "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
#   "click>=8.1.7,<9",
#   "html5lib>=1.1,<2",
#   "langchain-text-splitters>=1.0.0,<2",
#   "networkx>=3.4.2,<4",
#   "nltk>=3.9.1,<4",
#   "nrel-elm>=0.0.34,<1",
#   "numpy>=2.2.4,<3",
#   "openai>=1.1.0",
#   "pandas>=2.2.3,<3",
#   "pdftotext>=2.2.2,<3",
#   "playwright>=1.49.0,<1.52",  # version range required for c4ai"
#   "pyjson5>=1.6.8,<2",
#   "rich>=13.9.4,<14",
]

[project.optional-dependencies]
# dev = [
#   "jupyter>=1.0.0,<1.1",
#   "pipreqs>=0.4.13,<0.5",
#   "ruff>=0.13.3,<0.14",
#   "ruff-lsp>=0.0.62,<0.0.63",
# ]
# test = [
#   "flaky>=3.8.1,<4",
#   "pytest>=8.3.3,<9",
#   "pytest-asyncio>=0.25.2,<0.26",
#   "pytest-cases>=3.8.6,<4",
#   "pytest-cov>=6.0.0,<7",
#   "pytest-mock>=3.14.0,<4",
#   "pytest-profiling>=1.7.0,<2",
#   "pytest-xdist>=3.6.1,<4",
#   "snakeviz>=2.2.2,<3",
#   "tox>=4.23.2,<5",
# ]
# doc = [
#   "ghp-import>=2.1",
#   "make>=0.1",
#   "pydata-sphinx-theme>=0.16.1,<0.17",
#   "sphinx-click>=5.1",
#   "sphinx-copybutton>=0.5",
#   "sphinx-tabs>=3.4",
#   "sphinxcontrib-mermaid>=1.0.0",
# ]
# build = [
#   "build>=1.2.2,<2",
#   "pkginfo>=1.12.1.2,<2",
#   "twine>=6.1.0,<7",
# ]

[project.scripts]
reVReports = "reVReports.cli:main"

[project.urls]
homepage = "https://github.com/NREL/reVReports"
documentation = "https://nrel.github.io/reVReports/"
repository = "https://github.com/NREL/reVReports"


[tool.setuptools.packages]
find = { include = ["reV*"] }

[tool.setuptools.dynamic]
version = {attr = "reVReports.version.__version__"}


[tool.pixi.workspace]
name = "reVReports"
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
reVReports = { path = ".", editable = true }

[tool.pixi.tasks]
